<resources>
    <string name="app_name">My Application</string>
    <string name="mas_uno">+1</string>
    <string name="mas_dos">+2</string>
    <string name="mas_tres">+3</string>
    <string name="mas">+</string>
    <string name="equipo_1">Equipo 1</string>
    <string name="equipo_2">Equipo 2</string>
    <string name="treinta_cuatro">34</string>
    <string name="dieciocho">18</string>
    <string name="diez_hora">10:00</string>
    <string name="x">X</string>
    <string name="primero">1.º</string>
    <string name="cero">0</string>
    <string name="editar">EDITAR</string>
    <string name="compartir">COMPARTIR</string>
    
    
    <!--Strings Pantalla Formulario -->
    
    <string name="examen_android">Examen de Android</string>
    <string name="datos_alumno">1. Datos del Alumno</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="respuesta_correcta">2. Selecciona la respuesta correcta</string>
    <string name="LinearLayout">LinearLayout</string>
    <string name="ConstraintLayout">ConstraintLayout</string>
    <string name="FrameLayout">FrameLayout</string>
    <string name="pregunta">¿Qué componente se utiliza para crear diseños flexibles?</string>
    <string name="trespre">3. Selecciona todas las que apliquen</string>
    <string name="pregunta2">¿Cuáles son componentes de la arquitectura Android?</string>
    <string name="Activity">Activity</string>
    <string name="ViewModel">ViewModel</string>
    <string name="JavaScript">JavaScript</string>
    <string name="Repository">Repository</string>
    <string name="desarrollo">4. Pregunta de desarrollo</string>
    <string name="explica">Explica qué es Dependancy Injection</string>
    <string name="boton_enviar">Enviar Examen</string>
</resources>
